Use atc_tls.ca as ca certificate for CredHub
[#158436120](https://www.pivotaltracker.com/story/show/158436120)

Co-authored-by: Chris Dutra <cdutra@pivotal.io>

--- a/operations/ci-credhub.yml
+++ b/operations/ci-credhub.yml
@@ -30,9 +30,9 @@
         authentication:
           uaa:
             ca_certs:
-            - "((atc_ca.certificate))"
+            - ((atc_ca.certificate))
             url: https://((web_ip)):8443
-        ca_certificate: "((atc_ca.certificate))"
+        ca_certificate: ((atc_tls.ca))
         data_storage:
           type: postgres
           database: &credhub_db credhub
