--- a/operations/ci-uaa-clients.yml
+++ b/operations/ci-uaa-clients.yml
@@ -17,3 +17,7 @@
       refresh-token-validity: 3600
       scope: credhub.read,credhub.write
       secret: ""
+
+- type: replace
+  path: /instance_groups/name=web/jobs/name=uaa/properties/uaa/ca_certs/-
+  value: ((atc_tls.ca))
