Add uaa ca certs if they don't exist
Signed-off-by: Nick Mahoney <nmahoney@pivotal.io>

--- a/operations/ci-uaa-clients.yml
+++ b/operations/ci-uaa-clients.yml
@@ -19,5 +19,5 @@
       secret: ""
 
 - type: replace
-  path: /instance_groups/name=web/jobs/name=uaa/properties/uaa/ca_certs/-
+  path: /instance_groups/name=web/jobs/name=uaa/properties/uaa/ca_certs?/-
   value: ((atc_tls.ca))
