use atc_ca.certificate as CredHub ca certificate
Signed-off-by: Chris Dutra <cdutra@pivotal.io>

--- a/operations/ci-credhub.yml
+++ b/operations/ci-credhub.yml
@@ -32,7 +32,7 @@
             ca_certs:
             - ((atc_ca.certificate))
             url: https://((web_ip)):8443
-        ca_certificate: ((atc_tls.ca))
+        ca_certificate: ((atc_ca.certificate))
         data_storage:
           type: postgres
           database: &credhub_db credhub
