configure the bosh director with an auth json
- the pcf-pipelines rely on it having an AuthJson instead of just using
the vm_service_account_email

[#160078675]

Signed-off-by: Josh Zarrabi <jzarrabi@pivotal.io>

--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -168,6 +168,7 @@ jobs:
     params:
       OM_USERNAME: {{om_username}}
       OM_PASSWORD: {{om_password}}
+      GCP_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
     input_mapping:
       env-state: env-state-gcp
   - task: upload-configure-stage-srt
