--- a/scripts/terraforming/gcp/configure-bosh-director/config-director-template.yml
+++ b/scripts/terraforming/gcp/configure-bosh-director/config-director-template.yml
@@ -5,7 +5,7 @@ az-configuration:
 director-configuration:
   ntp_servers_string: 169.254.169.254
 iaas-configuration:
-  associated_service_account: {{.service_account_email}}
+  auth_json: {{ toJson (env "GCP_SERVICE_ACCOUNT_KEY") }}
   default_deployment_tag: {{.vm_tag}}
   project: {{.project}}
 network-assignment:
