--- a/scripts/terraforming/gcp/configure-bosh-director/task.yml
+++ b/scripts/terraforming/gcp/configure-bosh-director/task.yml
@@ -14,5 +14,6 @@ run:
   path: ci/scripts/terraforming/gcp/configure-bosh-director/task
 
 params:
+  GCP_SERVICE_ACCOUNT_KEY:
   OM_USERNAME:
   OM_PASSWORD:
