--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -704,6 +704,7 @@ jobs:
         BBL_TEST_ENV_ID_PREFIX: bbl-ci
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: latest-error
+        BBL_UP_TIMEOUT: 80m
     - task: bbl-up
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -717,6 +718,7 @@ jobs:
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: bbl-up
         BBL_DOWN_TIMEOUT: 20m
+        BBL_UP_TIMEOUT: 80m
     - task: plan
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -729,6 +731,7 @@ jobs:
         BBL_TEST_ENV_ID_PREFIX: bbl-ci
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: plan
+        BBL_UP_TIMEOUT: 80m
 
 - name: vsphere-acceptance-tests
   serial: true
@@ -993,6 +996,7 @@ jobs:
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: latest-error
         BBL_DOWN_TIMEOUT: 20m
+        BBL_UP_TIMEOUT: 80m
     - task: bbl-up
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -1006,6 +1010,7 @@ jobs:
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: bbl-up
         BBL_DOWN_TIMEOUT: 20m
+        BBL_UP_TIMEOUT: 80m
     - task: plan
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -1019,6 +1024,7 @@ jobs:
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: plan
         BBL_DOWN_TIMEOUT: 20m
+        BBL_UP_TIMEOUT: 80m
 
 - name: vsphere-acceptance-tests-bump-deployments
   serial_groups: [vsphere-acceptance]
