--- a/scripts/terraforming/aws/configure-bosh-director/config-director-template.yml
+++ b/scripts/terraforming/aws/configure-bosh-director/config-director-template.yml
@@ -3,43 +3,39 @@ az-configuration:
 - name: {{.}}
 {{end}}
 director-configuration:
-  ntp_servers_string: 169.254.169.254
+  ntp_servers_string: time1.google.com,time2.google.com,time3.google.com,time4.google.com
 iaas-configuration:
   access_key_id: {{.ops_manager_iam_user_access_key}}
   secret_access_key: {{.ops_manager_iam_user_secret_key}}
   vpc_id: {{.vpc_id}}
   security_group: {{.ops_manager_security_group_id}}
   key_pair_name: {{.ops_manager_ssh_public_key_name}}
-  ssh_private_key: {{.ssh_private_key}}
+  ssh_private_key: {{ toJson .ops_manager_sh_private_key }}
   region: {{.region}}
 network-assignment:
   network:
-    name: {{.infrastructure_subnet_name}}
+    name: {{.network_name}}
   singleton_availability_zone:
     name: {{index .azs 0}}
 networks-configuration:
   icmp_checks_enabled: false
   networks:
-  - name: {{.infrastructure_subnet_name}}
+  - name: ops-manager
     subnets:
     - availability_zone_names:
-      {{range .azs}}
-      - {{.}}
-      {{end}}
-      cidr: {{index .management_subnet_cidrs 0}}
-      dns: 169.254.169.254
-      gateway: {{.management_subnet_gateway}}
-      iaas_identifier: {{.infrastructure_subnet_ids}}
-      reserved_ip_ranges: {{cidrhost (index .management_subnet_cidrs 0) 0}}-{{cidrhost (index .management_subnet_cidrs 0) 4}}
+      - {{index .azs 0}}
+      cidr: {{index .infrastructure_subnet_cidrs 0}}
+      dns: 8.8.8.8
+      gateway: {{index .infrastructure_subnet_gateways 0}}
+      iaas_identifier: {{index .infrastructure_subnet_ids 0}}
+      reserved_ip_ranges: {{cidrhost (index .infrastructure_subnet_cidrs 0) 0}}-{{cidrhost (index .infrastructure_subnet_cidrs 0) 4}}
   - name: pas
     subnets:
     - availability_zone_names:
-      {{range .azs}}
-      - {{.}}
-      {{end}}
+      - {{index .azs 0}}
       cidr: {{index .pas_subnet_cidrs 0}}
-      dns: 169.254.169.254
-      gateway: {{.pas_subnet_gateway}}
+      dns: 8.8.8.8
+      gateway: {{.pas_subnet_gateways}}
       iaas_identifier: {{.pas_subnet_ids}}
       reserved_ip_ranges: {{cidrhost (index .pas_subnet_cidrs 0) 0}}-{{cidrhost (index .pas_subnet_cidrs 0) 4}}
 resource-configuration:
