--- a/scripts/terraforming/aws/configure-bosh-director/config-director-template.yml
+++ b/scripts/terraforming/aws/configure-bosh-director/config-director-template.yml
@@ -8,7 +8,7 @@ iaas-configuration:
   access_key_id: {{.ops_manager_iam_user_access_key}}
   secret_access_key: {{.ops_manager_iam_user_secret_key}}
   vpc_id: {{.vpc_id}}
-  security_group: {{.ops_manager_security_group_id}}
+  security_group: {{.vms_security_group_id}}
   key_pair_name: {{.ops_manager_ssh_public_key_name}}
   ssh_private_key: {{ toJson .ops_manager_ssh_private_key }}
   region: {{.region}}
@@ -35,8 +35,8 @@ networks-configuration:
       - {{index .azs 0}}
       cidr: {{index .pas_subnet_cidrs 0}}
       dns: 8.8.8.8
-      gateway: {{.pas_subnet_gateways}}
-      iaas_identifier: {{.pas_subnet_ids}}
+      gateway: {{index .pas_subnet_gateways 0}}
+      iaas_identifier: {{index .pas_subnet_ids 0}}
       reserved_ip_ranges: {{cidrhost (index .pas_subnet_cidrs 0) 0}}-{{cidrhost (index .pas_subnet_cidrs 0) 4}}
 resource-configuration:
   compilation:
