Assign ops-manager network for BOSH Director
[#160387160](https://www.pivotaltracker.com/story/show/16038716)

Co-authored-by: Chris Dutra <cdutra@pivotal.io>

--- a/scripts/terraforming/aws/configure-bosh-director/config-director-template.yml
+++ b/scripts/terraforming/aws/configure-bosh-director/config-director-template.yml
@@ -14,7 +14,7 @@ iaas-configuration:
   region: {{.region}}
 network-assignment:
   network:
-    name: {{.network_name}}
+    name: ops-manager
   singleton_availability_zone:
     name: {{index .azs 0}}
 networks-configuration:
