--- a/scripts/terraforming/aws/configure-bosh-director/config-director-template.yml
+++ b/scripts/terraforming/aws/configure-bosh-director/config-director-template.yml
@@ -3,7 +3,7 @@ az-configuration:
 - name: {{.}}
 {{end}}
 director-configuration:
-  ntp_servers_string: time1.google.com,time2.google.com,time3.google.com,time4.google.com
+  ntp_servers_string: 0.amazon.pool.ntp.org,1.amazon.pool.ntp.org,2.amazon.pool.ntp.org,3.amazon.pool.ntp.org
 iaas-configuration:
   access_key_id: {{.ops_manager_iam_user_access_key}}
   secret_access_key: {{.ops_manager_iam_user_secret_key}}
@@ -25,7 +25,7 @@ networks-configuration:
     - availability_zone_names:
       - {{index .azs 0}}
       cidr: {{index .infrastructure_subnet_cidrs 0}}
-      dns: 8.8.8.8
+      dns: {{cidrhost (index .infrastructure_subnet_cidrs 0) 2}}
       gateway: {{index .infrastructure_subnet_gateways 0}}
       iaas_identifier: {{index .infrastructure_subnet_ids 0}}
       reserved_ip_ranges: {{cidrhost (index .infrastructure_subnet_cidrs 0) 0}}-{{cidrhost (index .infrastructure_subnet_cidrs 0) 4}}
@@ -34,7 +34,7 @@ networks-configuration:
     - availability_zone_names:
       - {{index .azs 0}}
       cidr: {{index .pas_subnet_cidrs 0}}
-      dns: 8.8.8.8
+      dns: {{cidrhost (index .pas_subnet_gateways 0) 2}}
       gateway: {{index .pas_subnet_gateways 0}}
       iaas_identifier: {{index .pas_subnet_ids 0}}
       reserved_ip_ranges: {{cidrhost (index .pas_subnet_cidrs 0) 0}}-{{cidrhost (index .pas_subnet_cidrs 0) 4}}
