Add IaaS agnostic scripts to configure Bosh director
[#160387160](https://www.pivotaltracker.com/story/show/160387160)

Co-authored-by: Carlos Iriarte <me@carlosiriarte.com>

--- a/scripts/terraforming/configure-director/task.yml
+++ b/scripts/terraforming/configure-director/task.yml
@@ -9,10 +9,12 @@ image_resource:
 inputs:
 - name: env-state
 - name: ci
+- name: director-config-template
 
 run:
-  path: ci/scripts/terraforming/aws/configure-bosh-director/task
+  path: ci/scripts/terraforming/gcp/configure-bosh-director/task
 
 params:
+  TEMPLATE_PATH:
   OM_USERNAME:
   OM_PASSWORD:
