--- a/pipelines/infrastructure-ci.yml
+++ b/pipelines/infrastructure-ci.yml
@@ -27,7 +27,7 @@ resources:
   type: git
   source:
     uri: git@github.com:cloudfoundry/infrastructure-ci-bbl-states.git
-    private_key: {{cf_infra_bot_user_github_private_key}}
+    private_key: ((cf_infra_bot_user_github_private_key.private_key))
     branch: master
     paths:
     - ci-workers
@@ -55,10 +55,10 @@ jobs:
     - task: infrastructure-ci-tests
       file: ci/scripts/infrastructure-ci/run-tests/task.yml
       params:
-        AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-        AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
-        GOVCLOUD_AWS_SECRET_ACCESS_KEY: {{govcloud_images_secret_access_key}}
-        GOVCLOUD_AWS_ACCESS_KEY_ID: {{govcloud_images_access_key_id}}
+        AWS_ACCESS_KEY_ID: ((aws_access_key_id))
+        AWS_SECRET_ACCESS_KEY: ((aws_secret_access_key))
+        GOVCLOUD_AWS_SECRET_ACCESS_KEY: ((govcloud_images_secret_access_key))
+        GOVCLOUD_AWS_ACCESS_KEY_ID: ((govcloud_images_access_key_id))
 
 # Infrastructure
 - name: setup-worker-infrastructure
@@ -74,9 +74,9 @@ jobs:
   - task: bbl-up
     file: ci/scripts/common/bbl-up/task.yml
     params:
-      BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
-      BBL_GCP_REGION: {{gcp_region}}
-      BBL_GCP_ZONE: {{gcp_zone}}
+      BBL_GCP_SERVICE_ACCOUNT_KEY: ((gcp_service_account_key))
+      BBL_GCP_REGION: ((gcp_region))
+      BBL_GCP_ZONE: ((gcp_zone))
       BBL_STATE_DIR: windows-ci-worker
       BBL_NAME: windows-ci-worker
     ensure:
@@ -106,10 +106,10 @@ jobs:
     params:
       DEPLOYMENT_NAME: wings-windows-worker
       BBL_STATE_DIR: windows-ci-worker
-      CONCOURSE_TEAM: {{wings_concourse_team}}
-      TSA_HOST: {{wings_tsa_host}}
-      TSA_PUBLIC_KEY: {{wings_tsa_public_key}}
-      TSA_WORKER_PRIVATE_KEY: {{windows_tsa_worker_private_key}}
+      CONCOURSE_TEAM: ((wings_concourse_team))
+      TSA_HOST: ((wings_tsa_host))
+      TSA_PUBLIC_KEY: ((wings_tsa_public_key))
+      TSA_WORKER_PRIVATE_KEY: ((windows_tsa_worker_private_key.private_key))
 
 - name: delete-worker-deployment
   public: true
