--- a/pipelines/leftovers.yml
+++ b/pipelines/leftovers.yml
@@ -22,7 +22,7 @@ resources:
   source:
     owner: genevieve
     repository: leftovers
-    access_token: {{cf_infra_bot_user_github_access_token}}
+    access_token: ((cf_infra_bot_user_github_access_token))
 
 - name: infrastructure-ci
   type: git
@@ -35,7 +35,7 @@ resources:
   source:
     branch: master
     uri: git@github.com:genevieve/homebrew-tap.git
-    private_key: {{cf_infra_bot_user_github_private_key}}
+    private_key: ((cf_infra_bot_user_github_private_key.private_key))
 
 jobs:
 - name: test
@@ -61,7 +61,7 @@ jobs:
     file: ci/scripts/leftovers/acceptance/task.yml
     params:
       LEFTOVERS_ACCEPTANCE: gcp
-      BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+      BBL_GCP_SERVICE_ACCOUNT_KEY: ((gcp_service_account_key))
 
 - name: acceptance-aws
   serial: true
@@ -76,9 +76,9 @@ jobs:
     file: ci/scripts/leftovers/acceptance/task.yml
     params:
       LEFTOVERS_ACCEPTANCE: aws
-      BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-      BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
-      BBL_AWS_REGION: {{aws_region}}
+      BBL_AWS_ACCESS_KEY_ID: ((aws_access_key_id))
+      BBL_AWS_SECRET_ACCESS_KEY: ((aws_secret_access_key))
+      BBL_AWS_REGION: ((aws_region))
 
 - name: acceptance-azure
   serial: true
@@ -93,10 +93,10 @@ jobs:
     file: ci/scripts/leftovers/acceptance/task.yml
     params:
       LEFTOVERS_ACCEPTANCE: azure
-      BBL_AZURE_SUBSCRIPTION_ID: {{azure_subscription_id}}
-      BBL_AZURE_TENANT_ID: {{azure_tenant_id}}
-      BBL_AZURE_CLIENT_ID: {{azure_client_id}}
-      BBL_AZURE_CLIENT_SECRET: {{azure_client_secret}}
+      BBL_AZURE_SUBSCRIPTION_ID: ((azure_subscription_id))
+      BBL_AZURE_TENANT_ID: ((azure_tenant_id))
+      BBL_AZURE_CLIENT_ID: ((azure_client_id))
+      BBL_AZURE_CLIENT_SECRET: ((azure_client_secret))
 
 - name: acceptance-vsphere
   serial: true
@@ -110,15 +110,15 @@ jobs:
   - task: acceptance
     file: ci/scripts/leftovers/acceptance/task.yml
     tags:
-    - {{vsphere_network_name}}
+    - ((vsphere_network_name))
     params:
       LEFTOVERS_ACCEPTANCE: vsphere
-      BBL_VSPHERE_VCENTER_IP: {{vsphere_vcenter_ip}}
-      BBL_VSPHERE_VCENTER_USER: {{vsphere_vcenter_user}}
-      BBL_VSPHERE_VCENTER_PASSWORD: {{vsphere_vcenter_password}}
-      BBL_VSPHERE_VCENTER_DC: {{vsphere_vcenter_dc}}
-      BBL_VSPHERE_VCENTER_DS: {{vsphere_vcenter_ds}}
-      BBL_VSPHERE_VCENTER_RP: {{vsphere_vcenter_rp}}
+      BBL_VSPHERE_VCENTER_IP: ((vsphere_vcenter_ip))
+      BBL_VSPHERE_VCENTER_USER: ((vsphere_vcenter_user))
+      BBL_VSPHERE_VCENTER_PASSWORD: ((vsphere_vcenter_password))
+      BBL_VSPHERE_VCENTER_DC: ((vsphere_vcenter_dc))
+      BBL_VSPHERE_VCENTER_DS: ((vsphere_vcenter_ds))
+      BBL_VSPHERE_VCENTER_RP: ((vsphere_vcenter_rp))
 
 - name: releasable
   plan:
