--- a/pipelines/ovf-provider.yml
+++ b/pipelines/ovf-provider.yml
@@ -55,31 +55,31 @@ jobs:
       trigger: true
       passed: [test-ovf-provider]
       tags:
-      - {{vsphere_network_name}}
+      - ((vsphere_network_name))
     - get: ci
       resource: infrastructure-ci
       tags:
-      - {{vsphere_network_name}}
+      - ((vsphere_network_name))
     - get: core-os-ova
       tags:
-      - {{vsphere_network_name}}
+      - ((vsphere_network_name))
     - get: core-os-ovf
       tags:
-      - {{vsphere_network_name}}
+      - ((vsphere_network_name))
     - get: core-os-vmdk
       tags:
-      - {{vsphere_network_name}}
+      - ((vsphere_network_name))
   - task: run-acceptance-tests
     file: ci/scripts/ovf-provider/acceptance-tests/task.yml
     tags:
-    - {{vsphere_network_name}}
+    - ((vsphere_network_name))
     params:
-      VSPHERE_FOLDER: {{vsphere_vcenter_templates}}
-      VSPHERE_DATACENTER: {{vsphere_vcenter_dc}}
-      VSPHERE_RESOURCE_POOL: {{vsphere_vcenter_rp}}
-      VSPHERE_DATASTORE: {{vsphere_vcenter_ds}}
-      VSPHERE_NETWORK: {{vsphere_network_name}}
-      VSPHERE_USER: {{vsphere_vcenter_user}}
-      VSPHERE_PASSWORD: {{vsphere_vcenter_password}}
-      VSPHERE_SERVER: {{vsphere_vcenter_ip}}
+      VSPHERE_FOLDER: ((vsphere_vcenter_templates))
+      VSPHERE_DATACENTER: ((vsphere_vcenter_dc))
+      VSPHERE_RESOURCE_POOL: ((vsphere_vcenter_rp))
+      VSPHERE_DATASTORE: ((vsphere_vcenter_ds))
+      VSPHERE_NETWORK: ((vsphere_network_name))
+      VSPHERE_USER: ((vsphere_vcenter_user))
+      VSPHERE_PASSWORD: ((vsphere_vcenter_password))
+      VSPHERE_SERVER: ((vsphere_vcenter_ip))
       VSPHERE_ALLOW_UNVERIFIED_SSL: true
