Add option to ignore ops manager warnings

--- a/scripts/terraforming/apply-changes/task.yml
+++ b/scripts/terraforming/apply-changes/task.yml
@@ -14,5 +14,6 @@ run:
   path: ci/scripts/terraforming/apply-changes/task
 
 params:
-  OM_USERNAME:
-  OM_PASSWORD:
+  OM_USERNAME: ""
+  OM_PASSWORD: ""
+  IGNORE_WARNINGS: false
