--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -1648,7 +1648,7 @@ jobs:
         BBL_LB_TYPE: cf
         BBL_LB_DOMAIN: example.com
         BBL_LB_CERT: ((bbl_aws_cf_lb_cert.certificate))
-        BBL_LB_KEY: ((bbl_aws_cf_lb_key.private_key))
+        BBL_LB_KEY: ((bbl_aws_cf_lb_cert.private_key))
         PLAN_PATCH_DIR: acm-aws
     - task: alb-aws
       file: ci/scripts/bosh-bootloader/validate-plan-patch/task.yml
@@ -1660,7 +1660,7 @@ jobs:
         BBL_LB_TYPE: cf
         BBL_LB_DOMAIN: example.com
         BBL_LB_CERT: ((bbl_aws_cf_lb_cert.certificate))
-        BBL_LB_KEY: ((bbl_aws_cf_lb_key.private_key))
+        BBL_LB_KEY: ((bbl_aws_cf_lb_cert.private_key))
         PLAN_PATCH_DIR: alb-aws
     - task: bosh-lite-gcp
       file: ci/scripts/bosh-bootloader/validate-plan-patch/task.yml
@@ -1712,7 +1712,7 @@ jobs:
         BBL_LB_TYPE: cf
         BBL_LB_DOMAIN: example.com
         BBL_LB_CERT: ((bbl_aws_cf_lb_cert.certificate))
-        BBL_LB_KEY: ((bbl_aws_cf_lb_key.private_key))
+        BBL_LB_KEY: ((bbl_aws_cf_lb_cert.private_key))
         PLAN_PATCH_DIR: iso-segs-aws
         TF_VARS: isolation_segments=1
     - task: iso-segs-gcp
@@ -1724,7 +1724,7 @@ jobs:
         BBL_LB_TYPE: cf
         BBL_LB_DOMAIN: example.com
         BBL_LB_CERT: ((bbl_downstream_cf_ssl_cert.certificate))
-        BBL_LB_KEY: ((bbl_downstream_cf_ssl_cert_private_key.private_key))
+        BBL_LB_KEY: ((bbl_downstream_cf_ssl_cert.private_key))
         PLAN_PATCH_DIR: iso-segs-gcp
     - task: restricted-instance-groups-gcp
       file: ci/scripts/bosh-bootloader/validate-plan-patch/task.yml
@@ -1735,7 +1735,7 @@ jobs:
         BBL_LB_TYPE: cf
         BBL_LB_DOMAIN: example.com
         BBL_LB_CERT: ((bbl_downstream_cf_ssl_cert.certificate))
-        BBL_LB_KEY: ((bbl_downstream_cf_ssl_cert_private_key))
+        BBL_LB_KEY: ((bbl_downstream_cf_ssl_cert.private_key))
         PLAN_PATCH_DIR: restricted-instance-groups-gcp
 
 - name: bbl-aws-cf
