pin jumpbox deployment back before we assume a v3 openstack api
- we have to stop applying a v3 api opsfile in the bbl codebase to get
this version to work

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -847,6 +847,7 @@ jobs:
     - get: bosh-deployment
       trigger: true
     - get: jumpbox-deployment
+      version: {ref: 32c162b16f2a5a2639c78d905ba852487b93d507}
       trigger: true
   - put: version
     params:
