--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -321,8 +321,8 @@ resources:
   source:
     tag: ci
     repository: cfinfrastructure/bbl-state-resource
-    username: ((docker-username))
-    password: ((docker-password))
+    username: ((docker_user.username))
+    password: ((docker_user.password))
     email: ((docker-email))
 
 - name: bbl-state-resource-release-docker
@@ -330,16 +330,16 @@ resources:
   source:
     tag: pre-release
     repository: cfinfrastructure/bbl-state-resource
-    username: ((docker-username))
-    password: ((docker-password))
+    username: ((docker_user.username))
+    password: ((docker_user.password))
     email: ((docker-email))
 
 - name: cf-deployment-concourse-tasks-bbl-dev
   type: docker-image
   source:
     repository: cfinfrastructure/cf-deployment-concourse-tasks-bbl-dev
-    username: ((docker-username))
-    password: ((docker-password))
+    username: ((docker_user.username))
+    password: ((docker_user.password))
     email: ((docker-email))
 
 - name: cf-deployment-concourse-tasks-docker-image
